fix: entries container spacing

--- a/src/app/patient/diary/diary.component.scss
+++ b/src/app/patient/diary/diary.component.scss
@@ -4,13 +4,19 @@
 }
 
 .container-diary {
-  padding-bottom: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.card-entries-container {
+  padding: 3px 10px;
 }
 
 .entries-side {
   background-color: white;
   border-radius: 10px;
   padding: 9px 1px 3px 1px;
+  margin-bottom: 0;
 }
 
 .card-entry {
